--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 </head>
 <body>
+   <header>
     <section>
         
         <div class="section-left">
@@ -33,6 +34,7 @@
             <img src="images/banner.png" alt="">
         </div>
     </section>
+   </header>
     <!------------ First section End---------------- -->
     
 
@@ -150,7 +152,7 @@
                 </div>
             </div>
         </div>
-        <!-- ---------------------End main div------------- 
+        <!-- ---------------------End Players platform------------- 
         ---------------------------------------------------->
 
         <!----------------------- Start Footer----------------
